@@ -16,8 +16,7 @@ template<typename S_var,
          template <typename> class Insert_Policy>
 CORBA::Boolean
 TAO::In_BD_String_SArgument_T<S_var,BOUND,Insert_Policy>::demarshal (
-    TAO_InputCDR & cdr
-  )
+    TAO_InputCDR & cdr)
 {
   CORBA::Boolean const demarshalled = cdr >> this->x_.out ();
   if (this->x_.in () != 0 && ACE_OS::strlen (this->x_.in ()) > BOUND)
@@ -39,8 +38,7 @@ TAO::In_BD_String_SArgument_T<S_var,BOUND,Insert_Policy>::interceptor_value (
   typedef typename S_var::s_traits::from_type from_type;
   Insert_Policy<from_type>::any_insert (
       any,
-      from_type (this->x_.in (), BOUND)
-    );
+      from_type (this->x_.in (), BOUND));
 }
 
 #endif /* TAO_HAS_INTERCEPTORS */
@@ -52,8 +50,7 @@ template<typename S_var,
          template <typename> class Insert_Policy>
 CORBA::Boolean
 TAO::Inout_BD_String_SArgument_T<S_var,BOUND,Insert_Policy>::marshal (
-    TAO_OutputCDR & cdr
-  )
+    TAO_OutputCDR & cdr)
 {
   if (this->x_.in () != 0 && ACE_OS::strlen (this->x_.in ()) > BOUND)
     {
@@ -67,8 +64,7 @@ template<typename S_var,
          template <typename> class Insert_Policy>
 CORBA::Boolean
 TAO::Inout_BD_String_SArgument_T<S_var,BOUND,Insert_Policy>::demarshal (
-    TAO_InputCDR & cdr
-  )
+    TAO_InputCDR & cdr)
 {
   CORBA::Boolean const demarshalled = cdr >> this->x_.out ();
   if (this->x_.in () != 0 && ACE_OS::strlen (this->x_.in ()) > BOUND)
@@ -90,8 +86,7 @@ interceptor_value (CORBA::Any *any) const
   typedef typename S_var::s_traits::from_type from_type;
   Insert_Policy<from_type>::any_insert (
       any,
-      from_type (this->x_.in (), BOUND)
-    );
+      from_type (this->x_.in (), BOUND));
 }
 
 #endif /* TAO_HAS_INTERCEPTORS */
@@ -103,8 +98,7 @@ template<typename S_var,
          template <typename> class Insert_Policy>
 CORBA::Boolean
 TAO::Out_BD_String_SArgument_T<S_var,BOUND,Insert_Policy>::marshal (
-    TAO_OutputCDR &cdr
-  )
+    TAO_OutputCDR &cdr)
 {
   if (this->x_.in () != 0 && ACE_OS::strlen (this->x_.in ()) > BOUND)
     {
@@ -125,8 +119,7 @@ interceptor_value (CORBA::Any *any) const
   typedef typename S_var::s_traits::from_type from_type;
   Insert_Policy<from_type>::any_insert (
       any,
-      from_type (this->x_.in (), BOUND)
-    );
+      from_type (this->x_.in (), BOUND));
 }
 
 #endif /* TAO_HAS_INTERCEPTORS */
